--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,11 @@ jobs:
         run:  |
           NUMBERS=$(paste -sd ',' numbers)
           echo $NUMBERS > fossify_import
+
+      - name: Create "SpamBlocker.csv" file
+        run:  |
+          echo "v${DATE}" > SpamBlocker.csv
+          cat numbers >> SpamBlocker.csv
           
       - name: Create "version" file
         run:  |
@@ -40,7 +45,7 @@ jobs:
           tag: v${{ env.DATE }}
           name: v${{ env.DATE }}
           body: Spam numaraları güncellendi ${{ env.DATE2 }}
-          files: numbers fossify_import
+          files: numbers fossify_import SpamBlocker.csv
           gzip: false
           draft: false
           prerelease: false
