--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Create "SpamBlocker.csv" file
         run:  |
-          echo "v${DATE}" > SpamBlocker.csv
+          echo "number" > SpamBlocker.csv
           cat numbers >> SpamBlocker.csv
           
       - name: Create "version" file
